crates/tui/tests/snapshots/explorer__explorer_140x35_light_tokens.snap
---
source: crates/tui/tests/explorer.rs
expression: "token_map(&mut h, &th)"
---
tokens: t text, d dim, m muted, A accent, o on_accent, C cursor, W cursor_text, S sel,
M mark, B cmdbar, P panel, K key_bg, Y key_text, F field, U button, E selection, r track,
s success, w warn, e error, k file kind, + a tint, . none

text colour
AAAAAAttttttttddd.ddd...........................................................................................ddddddddddddddddddddAAAAAAAA
.mmm.mmm.ttt.ttt..ddddddmmmddddddddmmmtttt.................................................................ddddddddddddddddd........mmmmmmm.
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
.oooooooooo..m..tttttt.....ttttttt.....tttttttt.....ttttttttt.....ttttttttttt.....ttttttttt..m..ttttttttt.....ttttttttt..m..mmmmmmm.......tt
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
Adddttttttttttttttttttttttttmmmm..AAAAAAAAAAAAAAAAAAAA..dddddddddddddd..dddddddddddddddddddd..dddddddddd.m.tttttttttttttttt.................
............................mAm.AAAAAAAA................dddddddddddddd..dddddddddddddddddddd..dddddddddd.m.dddddddddddddddd.................
mmmmmmm.....................mAm.AAAAAA..................dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddtttttttttttttttttttttmmmmAm.AAAAAAAAA...............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddtttttttttttttttttttttmmmmAm.AAAAA...................dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddtttttttttttttttttttttmmmmAm.AAAAAAA.................dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddtttttttttttttttttttttmmmmAA.kktttttttttttttt........dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddtttttttttttttttttttttmmmmAA.kktttttttttt............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddtttttttttttttttttttttmmmmAA.kktttttttttt............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
............................mAm.kkttttttttt.............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
mmmmmmmm....................mAm.kktttttttt..............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddttttttttttttttttttttttttmAm.kktttttttt..............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
A...AAAAAAAAAmmmmmm.ddddddd.mAm.kkttttttt...............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
AdddttttttttttttttttttttttttmAm.kkttttttttt.............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
A...AAAAAAmmmmmmmmm.ddddddd.mAooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooom..................................
AdddttttttttttttttttttttttttmAm.kkttttttttt.............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
A...AAAAAAmmmmmmmmm.ddddddd.mAm.kktttttttttt............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
............................mAm.kktttttttttttttt........dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
............................mAm.kktttttttt..............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
............................mAm.kktttttttt..............dddddddddddddd..dddddddddddddddddddd..dddddddddd.m..................................
............................m............................................................................m..................................
............................m............................................................................m..................................
............................m............................................................................m..................................
............................m............................................................................m..................................
............................m............................................................................m..................................
............................m............................................................................m..................................
.ttttttttmmmmmAAAAAAAAAAAAAAAAAAAAAAmmmmmkkkkkkkkkkkkkkkkkkkkkkkk.............................................ddddddddddddAAAAAAmmmm.AAAddd.
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
..ttttttttddddd....ttttttttdddd....tttttdddddd....tttttttttttddddddd....tttddddddddddd....tttttttddddddddd....ttttttttdddddd....tttttdddddd.
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP

background
MMMMMMEEEEEEEEEEEMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
MMMMMMMMMUUUMUUUMFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFMFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFM
............................................................................................................................................
BAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................................................................................................
.............................FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF...................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
.............................SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS...................................
.............................SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS...................................
.............................SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS...................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
.............................AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
............................................................................................................................................
MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMEEEMMMM
............................................................................................................................................
PPKKKKKKKKPPPPPPPPPKKKKKKKKPPPPPPPPKKKKKPPPPPPPPPPKKKKKKKKKKKPPPPPPPPPPPKKKPPPPPPPPPPPPPPPKKKKKKKPPPPPPPPPPPPPKKKKKKKKPPPPPPPPPPKKKKKPPPPPPP
............................................................................................................................................
